The user can now add an event via which is updated on the dashboard, added an edit button for each event (pop-up modal) and a delete button
Currently working with localhost

--- a/eventapp/src/todo.txt
+++ b/eventapp/src/todo.txt
@@ -2,10 +2,10 @@ Notes:
 - Local host is 3003. now 3002
 
 Todos for Ben: 
--
+- Login
 
 Todos for Calvin:
--
+- Dashboard
 
 Todos for Paul:
 - Event Listener
