Added login/register authentication (WIP)
Nested methods into the API class (and updated the calls)

--- a/eventapp/src/todo.txt
+++ b/eventapp/src/todo.txt
@@ -9,3 +9,10 @@ Todos for Calvin:
 
 Todos for Paul:
 - Event Listener
+- CSS 
+-= Colour Pallet
+-= - Ivory = #F5FBEF
+-= - Cambridge Blue = #92AD94
+-= - Reseda Green = #748B75
+-= - Rose Ebony = #503D42
+-= - Rich Black = #0C1618
