The dashboard/add event component conditionally renders based on the authenticated useState (I.e. if the user is logged in)

--- a/eventapp/src/todo.txt
+++ b/eventapp/src/todo.txt
@@ -9,7 +9,7 @@ Todos for Calvin:
 
 Todos for Paul:
 - Event Listener
-- CSS 
+- CSS / Focus on Dashboard
 -= Colour Pallet
 -= - Ivory = #F5FBEF
 -= - Cambridge Blue = #92AD94
